[user] delete edit cart

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,7 +14,7 @@ user:
   address:
     max_length: 255
 comment:
-  min_length: 6
+  min_length: 1
   max_length: 255
 product:
   name:
@@ -30,3 +30,6 @@ paginate:
 admin:
   list:
     per_page: 12
+cart:
+  item_id_default: 1
+  default_quantity: 1
