--- a/config/settings.yml
+++ b/config/settings.yml
@@ -45,3 +45,6 @@ category:
     max_length: 30
   priority:
     min_value: 1
+statistic:
+  sell_product: "sell_product"
+  order: "statistic_order"
